--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -21,13 +21,24 @@
     "@types/express": "^4.0.39",
     "@types/express-graphql": "0.0.35",
     "@types/passport": "^0.4.1",
+    "@types/react": "^16.0.25",
+    "@types/react-dom": "^16.0.3",
     "@types/source-map-support": "^0.4.0",
     "@types/winston": "^2.3.7",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-typescript": "^7.0.0-alpha.19",
     "express": "^4.16.2",
     "express-graphql": "^0.6.11",
     "passport": "^0.4.0",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1",
     "source-map-support": "^0.5.0",
-    "tsc": "^1.20150623.0",
+    "ts-loader": "^3.1.1",
+    "typescript": "^2.6.1",
+    "webpack": "^3.8.1",
     "winston": "^2.4.0"
   }
 }
