--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -11,9 +11,10 @@
       "strictNullChecks": true,
       "preserveConstEnums": true,
       "sourceMap": true,
-      "target": "es2015",
+      "target": "es5",
       "outDir": "./build",
       "rootDir": "./src",
+      "jsx": "react",
       "lib": [
         "es5",
         "es6",
@@ -35,7 +36,8 @@
       ]
   },
   "include": [
-      "src/**/*.ts"
+      "src/**/*.ts",
+      "src/**/*.tsx"
   ],
   "exclude": [
       "node_modules"
