--- a/server/package.json
+++ b/server/package.json
@@ -19,17 +19,26 @@
   },
   "homepage": "https://github.com/ErikGoldman/houseparty#readme",
   "dependencies": {
+    "@types/connect-redis": "0.0.7",
     "@types/express": "^4.0.39",
     "@types/express-graphql": "0.0.35",
+    "@types/express-session": "^1.15.6",
     "@types/graphql": "^0.11.6",
     "@types/passport": "^0.4.1",
+    "@types/pg": "^7.1.5",
     "@types/source-map-support": "^0.4.0",
     "@types/winston": "^2.3.7",
+    "connect-redis": "^3.3.2",
     "express": "^4.16.2",
     "express-graphql": "^0.6.11",
+    "express-session": "^1.15.6",
     "graphql": "^0.11.7",
     "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0",
+    "pg": "^7.4.0",
+    "reflect-metadata": "^0.1.10",
     "source-map-support": "^0.5.0",
+    "typeorm": "^0.1.3",
     "typescript": "^2.6.1",
     "winston": "^2.4.0"
   }
