--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -10,6 +10,8 @@
       "removeComments": true,
       "strictNullChecks": true,
       "preserveConstEnums": true,
+      "emitDecoratorMetadata": true,
+      "experimentalDecorators": true,
       "sourceMap": true,
       "target": "es2015",
       "outDir": "./build",
