--- a/client/package.json
+++ b/client/package.json
@@ -18,24 +18,48 @@
   },
   "homepage": "https://github.com/ErikGoldman/houseparty#readme",
   "dependencies": {
+    "@blueprintjs/core": "^1.33.0",
     "@types/express": "^4.0.39",
     "@types/express-graphql": "0.0.35",
+    "@types/graphql": "^0.11.6",
+    "@types/lodash": "^4.14.85",
     "@types/passport": "^0.4.1",
+    "@types/pure-render-decorator": "^0.2.28",
     "@types/react": "^16.0.25",
+    "@types/react-addons-css-transition-group": "^15.0.3",
     "@types/react-dom": "^16.0.3",
+    "@types/react-router": "^4.0.17",
+    "@types/react-router-dom": "^4.2.1",
     "@types/source-map-support": "^0.4.0",
     "@types/winston": "^2.3.7",
+    "apollo-client": "^2.0.3",
+    "apollo-client-preset": "^1.0.3",
+    "apollo-link-dedup": "^1.0.2",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-relay": "^1.4.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-typescript": "^7.0.0-alpha.19",
+    "css-loader": "^0.28.7",
     "express": "^4.16.2",
     "express-graphql": "^0.6.11",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.5",
+    "graphql": "^0.11.7",
+    "graphql-tag": "^2.5.0",
+    "lodash": "^4.17.4",
+    "lodash.flowright": "^3.5.0",
     "passport": "^0.4.0",
     "react": "^16.1.1",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-apollo": "^2.0.1",
     "react-dom": "^16.1.1",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "relay-compiler": "^1.4.1",
     "source-map-support": "^0.5.0",
+    "style-loader": "^0.19.0",
     "ts-loader": "^3.1.1",
     "typescript": "^2.6.1",
     "webpack": "^3.8.1",
