--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/ErikGoldman/houseparty#readme",
   "dependencies": {
     "@blueprintjs/core": "^1.33.0",
+    "@blueprintjs/datetime": "^1.24.0",
     "@types/express": "^4.0.39",
     "@types/express-graphql": "0.0.35",
     "@types/graphql": "^0.11.6",
@@ -50,6 +51,7 @@
     "graphql-tag": "^2.5.0",
     "lodash": "^4.17.4",
     "lodash.flowright": "^3.5.0",
+    "moment": "^2.19.2",
     "passport": "^0.4.0",
     "react": "^16.1.1",
     "react-addons-css-transition-group": "^15.6.2",
