--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "@types/passport": "^0.4.1",
     "@types/pg": "^7.1.5",
     "@types/pg-connection-string": "^0.1.1",
+    "@types/puppeteer": "^0.13.3",
     "@types/source-map-support": "^0.4.0",
     "@types/winston": "^2.3.7",
     "connect-redis": "^3.3.2",
@@ -39,6 +40,7 @@
     "passport-google-oauth20": "^1.0.0",
     "pg": "^7.4.0",
     "pg-connection-string": "^2.0.0",
+    "puppeteer": "^0.13.0",
     "reflect-metadata": "^0.1.10",
     "source-map-support": "^0.5.0",
     "typeorm": "^0.1.3",
